# Neuron_MLP

./: CMakeLists.txt  FileController.h  MPL.cpp  MPL.h  Main.cpp  MyNeuron.cpp  MyNeuron.h  Neuron_MLP.sln  Neuron_MLP.vcxproj  Neuron_MLP.vcxproj.filters  README.md  data.txt  list.txt  setup.py
